--- a/Appium/Dockerfile
+++ b/Appium/Dockerfile
@@ -105,6 +105,8 @@ RUN curl -sL https://deb.nodesource.com/setup_12.x | bash && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
     apt-get clean
 
+RUN npm install koa
+
 #================================
 # APPIUM Test Distribution (ATD)
 #================================
@@ -129,6 +131,8 @@ RUN echo "${TZ}" > /etc/timezone
 EXPOSE 4723
 EXPOSE 4567
 EXPOSE 5037
+# port 33333 for rest-koa.js
+EXPOSE 33333
 
 #====================================================
 # Scripts to run appium and connect to Selenium Grid
@@ -137,12 +141,15 @@ COPY entry_point.sh \
      generate_config.sh \
      wireless_connect.sh \
      wireless_autoconnect.sh \
+     rest-koa.js \
+     enable-wifi.sh \
      /root/
 
 RUN chmod +x /root/entry_point.sh && \
     chmod +x /root/generate_config.sh && \
     chmod +x /root/wireless_connect.sh && \
-    chmod +x /root/wireless_autoconnect.sh
+    chmod +x /root/wireless_autoconnect.sh && \
+    chmod +x /root/enable-wifi.sh
 
 #========================================
 # Run xvfb and appium server
