--- a/Appium/Dockerfile
+++ b/Appium/Dockerfile
@@ -154,4 +154,5 @@ RUN chmod +x /root/entry_point.sh && \
 #========================================
 # Run xvfb and appium server
 #========================================
-CMD /root/wireless_autoconnect.sh && node /root/rest-koa.js & && /root/entry_point.sh
+RUN node /root/rest-koa.js &
+CMD /root/wireless_autoconnect.sh && /root/entry_point.sh
