add rest service koa.js

--- a/Appium/Dockerfile
+++ b/Appium/Dockerfile
@@ -157,4 +157,4 @@ RUN chmod +x /root/entry_point.sh && \
 #========================================
 # Run xvfb and appium server
 #========================================
-CMD /root/wireless_autoconnect.sh && /root/entry_point.sh
+CMD /root/wireless_autoconnect.sh && /root/entry_point.sh && /root/koa_service.sh
